Add security tests for cross-user access in CashMovement, Category, LiquidityAccount, IlliquidAsset, and Transfer services; ensure proper handling of unauthorized access